service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  type: NodePort
  selector:
    app: ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 
      nodePort: 30007
